# QEverCloud-example-NotePoster

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  NotePoster.desktop.in  NotePoster.pro  NotePoster.rc  NotePosterApplication.cpp  NotePosterApplication.h  README.md  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
cmake/modules/: NotePosterCMakePolicies.cmake  NotePosterCompilerSettings.cmake  NotePosterSetupQt.cmake
icons/: mainicon.icns
